# codehook

./: .gitignore  LICENSE.txt  README.md  config.cfg  config.cfg.example  pyproject.toml
.github/: FUNDING.yml
codehook/: APIGateway.py  Deployer.py  Lambda.py  LambdaBasics.py  LambdaDeployer.py  RestBasics.py  RestDeployer.py  __main__.py  aws.py  aws_apigateway.py  aws_lambda.py  core.py  helpers.py  main.py  model.py  openai.py  retries.py  stripe.py
codehook/skeletons/: lambda_handler_rest.py
codehook/skeletons/stripe/: example_payload.json  handler.py  lambda_handler_rest.py
codehook/sources/: stripe.py
dashboard/: auth.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/app/dashboard/(overview)/: page.tsx
dashboard/app/dashboard/customers/: page.tsx
dashboard/app/dashboard/invoices/: page.tsx
dashboard/app/dashboard/invoices/[id]/edit/: page.tsx
dashboard/app/dashboard/invoices/create/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/ui/: button.tsx  codehook-logo.tsx  fonts.ts  login-form.tsx  search.tsx
dashboard/app/ui/customers/: table.tsx
dashboard/app/ui/dashboard/: cards.tsx  latest-invoices.tsx  nav-links.tsx  revenue-chart.tsx  sidenav.tsx
dashboard/app/ui/invoices/: breadcrumbs.tsx  buttons.tsx  create-form.tsx  edit-form.tsx  pagination.tsx
dashboard/scripts/: seed.js
tests/: echo.py  handler.py  lambda_handler.py  lambda_handler_rest.py  test_aws.py  test_codehook.py  test_main.py  test_stripe.py
