[tool.poetry]
name = "codehook"
version = "0.1.0"
description = ""
authors = ["Eduardo Janicas <edujanicas@icloud.com>"]
readme = "README.md"


[tool.poetry.scripts]
codehook = "codehook.main:app"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
boto3 = "^1.28.40"
python-dotenv = "^1.0.0"
rich = "^13.5.2"
requests = "^2.31.0"
stripe = "^7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
